--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -5,14 +5,19 @@ on:
     - cron: '0 */6 * * *'  # Runs every 6 hours
   workflow_dispatch:  # Allows manual trigger
 
+permissions:
+  contents: write
+  actions: write
+
 jobs:
   backup:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0  # Fetch all history
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Git
       run: |
