--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0  # Fetch all history
-        token: ${{ secrets.GITHUB_TOKEN }}
+        persist-credentials: false  # This is important to use PAT instead of GITHUB_TOKEN
 
     - name: Set up Git
       run: |
@@ -47,13 +47,18 @@ jobs:
 
     - name: Commit and push if there are changes
       if: steps.check_changes.outputs.has_changes == 'true'
+      env:
+        GITHUB_PAT: ${{ secrets.BACKUP_PAT }}
       run: |
         timestamp=$(date +%Y-%m-%d_%H:%M:%S)
         git commit -m "Automated backup - ${timestamp}"
+        git remote set-url origin https://x-access-token:${GITHUB_PAT}@github.com/${GITHUB_REPOSITORY}.git
         git push origin HEAD:backup/latest --force
         git push origin HEAD:$(git branch --show-current)
 
     - name: Cleanup old backups
+      env:
+        GITHUB_PAT: ${{ secrets.BACKUP_PAT }}
       run: |
         # Keep only the last 30 backup branches
         git fetch origin
