--- a/pytest.ini
+++ b/pytest.ini
@@ -55,4 +55,11 @@ performance = tests/performance
 log_cli = true
 log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
-log_cli_date_format = %Y-%m-%d %H:%M:%S 
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
+# Markers for different test types
+markers =
+    unit: Unit tests
+    integration: Integration tests
+    system: System tests
+    slow: Tests that take longer to run 
