--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core dependencies
-alpaca-py>=0.39.0
+alpaca-py>=0.8.0
 pandas>=2.0.0
 numpy>=1.24.0
 python-dotenv>=1.0.0
@@ -8,7 +8,7 @@ websockets>=11.0.0
 ta>=0.10.0  # Technical analysis library
 python-telegram-bot>=20.0  # For Telegram notifications
 schedule>=1.2.0  # For scheduling tasks
-psutil>=5.9.0  # For process management
+psutil>=5.9.8
 
 # Database
 aiosqlite>=0.19.0
@@ -19,18 +19,18 @@ alembic>=1.12.0
 redis>=4.6.0
 msgpack>=1.0.0
 
-# Testing
-pytest>=7.4.0
+# Testing and development
+pytest>=8.0.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 pytest-mock>=3.12.0
 pytest-timeout>=2.1.0
 
 # Code quality
-black>=23.0.0
+black>=24.1.0
 isort>=5.12.0
-mypy>=1.5.0
-flake8>=6.1.0
+mypy>=1.8.0
+flake8>=7.0.0
 bandit>=1.7.5
 
 # Data processing and visualization
@@ -59,6 +59,8 @@ python-jose>=3.3.0
 # Documentation
 Sphinx>=7.1.0
 sphinx-rtd-theme>=1.3.0
+mkdocs>=1.5.0
+mkdocs-material>=9.5.0
 
 # Plugin system
 PyYAML>=6.0.0
